--- a/tensorflow/examples/udacity/3_regularization.ipynb
+++ b/tensorflow/examples/udacity/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,31 +239,31 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 16.442358\n",
-      "Training accuracy: 10.2%\n",
-      "Validation accuracy: 13.2%\n",
-      "Loss at step 100: 0.789981\n",
-      "Training accuracy: 81.9%\n",
-      "Validation accuracy: 80.7%\n",
-      "Loss at step 200: 0.786125\n",
+      "Loss at step 0: 17.853739\n",
+      "Training accuracy: 10.6%\n",
+      "Validation accuracy: 14.8%\n",
+      "Loss at step 100: 0.790783\n",
+      "Training accuracy: 81.8%\n",
+      "Validation accuracy: 80.5%\n",
+      "Loss at step 200: 0.786388\n",
       "Training accuracy: 81.8%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 300: 0.784821\n",
+      "Loss at step 300: 0.784935\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 400: 0.784285\n",
-      "Training accuracy: 81.9%\n",
-      "Validation accuracy: 80.5%\n",
-      "Loss at step 500: 0.784034\n",
+      "Loss at step 400: 0.784341\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 600: 0.783905\n",
+      "Loss at step 500: 0.784063\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 700: 0.783835\n",
-      "Training accuracy: 82.0%\n",
+      "Loss at step 600: 0.783920\n",
+      "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 800: 0.783796\n",
+      "Loss at step 700: 0.783843\n",
+      "Training accuracy: 81.9%\n",
+      "Validation accuracy: 80.6%\n",
+      "Loss at step 800: 0.783800\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
       "Test accuracy: 87.7%\n"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,108 +353,103 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 316.503662\n",
-      "Minibatch accuracy: 10.2%\n",
-      "Validation accuracy: 24.6%\n",
-      "Minibatch loss at step 500: 12.488986\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 79.2%\n",
-      "Minibatch loss at step 1000: 4.190944\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 81.5%\n",
-      "Minibatch loss at step 1500: 1.213827\n",
-      "Minibatch accuracy: 87.5%\n",
+      "Minibatch loss at step 0: 425.115784\n",
+      "Minibatch accuracy: 8.6%\n",
+      "Validation accuracy: 29.2%\n",
+      "Minibatch loss at step 500: 12.228584\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 80.1%\n",
+      "Minibatch loss at step 1000: 4.311478\n",
+      "Minibatch accuracy: 78.9%\n",
       "Validation accuracy: 81.2%\n",
-      "Minibatch loss at step 2000: 0.387934\n",
+      "Minibatch loss at step 1500: 2.236641\n",
       "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 84.5%\n",
-      "Minibatch loss at step 2500: 0.449269\n",
-      "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 85.4%\n",
-      "Minibatch loss at step 3000: 0.425320\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 86.6%\n",
-      "Test accuracy: 93.1%\n"
+      "Validation accuracy: 83.0%\n",
+      "Minibatch loss at step 2000: 0.699655\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 84.2%\n",
+      "Minibatch loss at step 2500: 0.545466\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 85.3%\n",
+      "Minibatch loss at step 3000: 0.442514\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 86.2%\n",
+      "Test accuracy: 93.0%\n"
      ]
     }
    ],
    "source": [
     "# Neural Network with L2 Loss Function\n",
     "\n",
-    "# Hyper parameters that can be tweaked for better accuracy\n",
-    "hyper_beta = 0.001\n",
-    "# End Hyper parameters\n",
+    "def train_graph(hyper_beta=0.001, batch_size=128, hidden_nodes=1024, num_gradient_descent_steps=3001):r\n",
+    "    graph = tf.Graph()\n",
+    "    with graph.as_default():\n",
     "\n",
-    "batch_size = 128\n",
-    "hidden_nodes = 1024\n",
+    "      # Input data. For the training data, we use a placeholder that will be fed\n",
+    "      # at run time with a training minibatch.\n",
+    "      tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                        shape=(batch_size, image_size * image_size))\n",
+    "      tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "      tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "      tf_test_dataset = tf.constant(test_dataset)\n",
     "\n",
-    "graph = tf.Graph()\n",
-    "with graph.as_default():\n",
+    "      # Variables.\n",
+    "      weights = tf.Variable(tf.truncated_normal([image_size * image_size, hidden_nodes]))\n",
+    "      biases = tf.Variable(tf.zeros([hidden_nodes]))\n",
     "\n",
-    "  # Input data. For the training data, we use a placeholder that will be fed\n",
-    "  # at run time with a training minibatch.\n",
-    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
-    "                                    shape=(batch_size, image_size * image_size))\n",
-    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
-    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "  tf_test_dataset = tf.constant(test_dataset)\n",
-    "  \n",
-    "  # Variables.\n",
-    "  weights = tf.Variable(tf.truncated_normal([image_size * image_size, hidden_nodes]))\n",
-    "  biases = tf.Variable(tf.zeros([hidden_nodes]))\n",
+    "      weights2 = tf.Variable(tf.truncated_normal([hidden_nodes, num_labels]))\n",
+    "      biases2 = tf.Variable(tf.zeros([num_labels]))\n",
+    "\n",
+    "      # Training computation.\n",
+    "      logits = tf.matmul(tf_train_dataset, weights) + biases\n",
+    "      x2 = tf.nn.relu(logits)\n",
+    "      logits2 = tf.matmul(x2, weights2) + biases2\n",
+    "      loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits2))\n",
+    "      l2 = loss + hyper_beta * tf.nn.l2_loss(weights)\n",
+    "\n",
+    "      logits_valid = tf.matmul(tf_valid_dataset, weights) + biases\n",
+    "      x2_valid = tf.nn.relu(logits_valid)\n",
+    "      logits2_valid = tf.matmul(x2_valid, weights2) + biases2\n",
+    "\n",
+    "      logits_test = tf.matmul(tf_test_dataset, weights) + biases\n",
+    "      x2_test = tf.nn.relu(logits_test)\n",
+    "      logits2_test = tf.matmul(x2_test, weights2) + biases2\n",
+    "\n",
+    "      # Optimizer.\n",
+    "      optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(l2)\n",
+    "\n",
+    "      # Predictions for the training, validation, and test data.\n",
+    "      train_prediction = tf.nn.softmax(logits2)\n",
+    "      valid_prediction = tf.nn.softmax(logits2_valid)\n",
+    "      test_prediction = tf.nn.softmax(logits2_test)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    with tf.Session(graph=graph) as session:\n",
+    "      tf.global_variables_initializer().run()\n",
+    "      print(\"Initialized\")\n",
+    "      for step in range(num_gradient_descent_steps):\n",
+    "        # Pick an offset within the training data, which has been randomized.\n",
+    "        # Note: we could use better randomization across epochs.\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        # Generate a minibatch.\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "        # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "        # and the value is the numpy array to feed to it.\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        _, l, predictions = session.run(\n",
+    "          [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 500 == 0):\n",
+    "          print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "          print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "          print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "            valid_prediction.eval(), valid_labels))\n",
+    "      print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))\n",
     "    \n",
-    "  weights2 = tf.Variable(tf.truncated_normal([hidden_nodes, num_labels]))\n",
-    "  biases2 = tf.Variable(tf.zeros([num_labels]))\n",
-    "  \n",
-    "  # Training computation.\n",
-    "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
-    "  x2 = tf.nn.relu(logits)\n",
-    "  logits2 = tf.matmul(x2, weights2) + biases2\n",
-    "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits2))\n",
-    "  l2 = loss + hyper_beta * tf.nn.l2_loss(weights)\n",
-    "\n",
-    "  logits_valid = tf.matmul(tf_valid_dataset, weights) + biases\n",
-    "  x2_valid = tf.nn.relu(logits_valid)\n",
-    "  logits2_valid = tf.matmul(x2_valid, weights2) + biases2\n",
-    "    \n",
-    "  logits_test = tf.matmul(tf_test_dataset, weights) + biases\n",
-    "  x2_test = tf.nn.relu(logits_test)\n",
-    "  logits2_test = tf.matmul(x2_test, weights2) + biases2\n",
-    "    \n",
-    "  # Optimizer.\n",
-    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(l2)\n",
-    "  \n",
-    "  # Predictions for the training, validation, and test data.\n",
-    "  train_prediction = tf.nn.softmax(logits2)\n",
-    "  valid_prediction = tf.nn.softmax(logits2_valid)\n",
-    "  test_prediction = tf.nn.softmax(logits2_test)\n",
-    "\n",
-    "\n",
-    "num_steps = 3001\n",
-    "\n",
-    "with tf.Session(graph=graph) as session:\n",
-    "  tf.global_variables_initializer().run()\n",
-    "  print(\"Initialized\")\n",
-    "  for step in range(num_steps):\n",
-    "    # Pick an offset within the training data, which has been randomized.\n",
-    "    # Note: we could use better randomization across epochs.\n",
-    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
-    "    # Generate a minibatch.\n",
-    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
-    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
-    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
-    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
-    "    # and the value is the numpy array to feed to it.\n",
-    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
-    "    _, l, predictions = session.run(\n",
-    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "    if (step % 500 == 0):\n",
-    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
-    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
-    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
-    "        valid_prediction.eval(), valid_labels))\n",
-    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+    "train_graph()"
    ]
   },
   {
@@ -470,6 +465,47 @@
     "Let's demonstrate an extreme case of overfitting. Restrict your training data to just a few batches. What happens?\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 387.829254\n",
+      "Minibatch accuracy: 0.0%\n",
+      "Validation accuracy: 11.1%\n",
+      "Minibatch loss at step 500: nan\n",
+      "Minibatch accuracy: 0.0%\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 1000: nan\n",
+      "Minibatch accuracy: 33.3%\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 1500: nan\n",
+      "Minibatch accuracy: 0.0%\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 2000: nan\n",
+      "Minibatch accuracy: 66.7%\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 2500: nan\n",
+      "Minibatch accuracy: 33.3%\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 3000: nan\n",
+      "Minibatch accuracy: 0.0%\n",
+      "Validation accuracy: 10.0%\n",
+      "Test accuracy: 10.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_graph(batch_size=3)"
    ]
   },
   {
