Set up correct problem 3 template, but need to debug

--- a/tensorflow/examples/udacity/3_regularization.ipynb
+++ b/tensorflow/examples/udacity/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -239,31 +239,31 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 17.853739\n",
-      "Training accuracy: 10.6%\n",
-      "Validation accuracy: 14.8%\n",
-      "Loss at step 100: 0.790783\n",
+      "Loss at step 0: 14.736647\n",
+      "Training accuracy: 19.2%\n",
+      "Validation accuracy: 22.9%\n",
+      "Loss at step 100: 0.789904\n",
       "Training accuracy: 81.8%\n",
       "Validation accuracy: 80.5%\n",
-      "Loss at step 200: 0.786388\n",
+      "Loss at step 200: 0.786119\n",
       "Training accuracy: 81.8%\n",
-      "Validation accuracy: 80.6%\n",
-      "Loss at step 300: 0.784935\n",
+      "Validation accuracy: 80.7%\n",
+      "Loss at step 300: 0.784829\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 400: 0.784341\n",
+      "Loss at step 400: 0.784294\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 500: 0.784063\n",
+      "Loss at step 500: 0.784041\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 600: 0.783920\n",
+      "Loss at step 600: 0.783911\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 700: 0.783843\n",
+      "Loss at step 700: 0.783839\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 800: 0.783800\n",
+      "Loss at step 800: 0.783798\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
       "Test accuracy: 87.7%\n"
@@ -345,43 +345,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized\n",
-      "Minibatch loss at step 0: 425.115784\n",
-      "Minibatch accuracy: 8.6%\n",
-      "Validation accuracy: 29.2%\n",
-      "Minibatch loss at step 500: 12.228584\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 80.1%\n",
-      "Minibatch loss at step 1000: 4.311478\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 81.2%\n",
-      "Minibatch loss at step 1500: 2.236641\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 83.0%\n",
-      "Minibatch loss at step 2000: 0.699655\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 84.2%\n",
-      "Minibatch loss at step 2500: 0.545466\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 85.3%\n",
-      "Minibatch loss at step 3000: 0.442514\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 86.2%\n",
-      "Test accuracy: 93.0%\n"
+      "Initialized\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'train_labels' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-ea88f918932a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     72\u001b[0m       \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test accuracy: %.1f%%\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_prediction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 74\u001b[1;33m \u001b[0mtrain_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-23-ea88f918932a>\u001b[0m in \u001b[0;36mtrain_graph\u001b[1;34m(hyper_beta, batch_size, hidden_nodes, num_gradient_descent_steps, training_data_set_len)\u001b[0m\n\u001b[0;32m     55\u001b[0m           \u001b[0mtrain_dataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtraining_data_set_len\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# limit batch size for overfitting\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m           \u001b[0mtrain_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtraining_data_set_len\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# labels need to match shape of train data set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m         \u001b[0moffset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtrain_labels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m         \u001b[1;31m# Generate a minibatch.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m         \u001b[0mbatch_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffset\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'train_labels' referenced before assignment"
      ]
     }
    ],
    "source": [
     "# Neural Network with L2 Loss Function\n",
     "\n",
-    "def train_graph(hyper_beta=0.001, batch_size=128, hidden_nodes=1024, num_gradient_descent_steps=3001):r\n",
+    "def train_graph(hyper_beta=0.001, batch_size=128, hidden_nodes=1024, num_gradient_descent_steps=3001, training_data_set_len=-1):\n",
     "    graph = tf.Graph()\n",
     "    with graph.as_default():\n",
     "\n",
@@ -432,6 +422,9 @@
     "      for step in range(num_gradient_descent_steps):\n",
     "        # Pick an offset within the training data, which has been randomized.\n",
     "        # Note: we could use better randomization across epochs.\n",
+    "        if training_data_set_len > 0:\n",
+    "          train_dataset = train_dataset[:training_data_set_len,:] # limit batch size for overfitting\n",
+    "          train_labels = train_labels[:training_data_set_len] # labels need to match shape of train data set\n",
     "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
     "        # Generate a minibatch.\n",
     "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
@@ -464,48 +457,20 @@
     "---------\n",
     "Let's demonstrate an extreme case of overfitting. Restrict your training data to just a few batches. What happens?\n",
     "\n",
+    "Reducing the training data to a few batches made the validation accuracy tank. We also can see that the minibatch loss becomes NaN\n",
+    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized\n",
-      "Minibatch loss at step 0: 387.829254\n",
-      "Minibatch accuracy: 0.0%\n",
-      "Validation accuracy: 11.1%\n",
-      "Minibatch loss at step 500: nan\n",
-      "Minibatch accuracy: 0.0%\n",
-      "Validation accuracy: 10.0%\n",
-      "Minibatch loss at step 1000: nan\n",
-      "Minibatch accuracy: 33.3%\n",
-      "Validation accuracy: 10.0%\n",
-      "Minibatch loss at step 1500: nan\n",
-      "Minibatch accuracy: 0.0%\n",
-      "Validation accuracy: 10.0%\n",
-      "Minibatch loss at step 2000: nan\n",
-      "Minibatch accuracy: 66.7%\n",
-      "Validation accuracy: 10.0%\n",
-      "Minibatch loss at step 2500: nan\n",
-      "Minibatch accuracy: 33.3%\n",
-      "Validation accuracy: 10.0%\n",
-      "Minibatch loss at step 3000: nan\n",
-      "Minibatch accuracy: 0.0%\n",
-      "Validation accuracy: 10.0%\n",
-      "Test accuracy: 10.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_graph(batch_size=3)"
+    "train_graph(training_data_set_len=500)"
    ]
   },
   {
@@ -523,6 +488,93 @@
     "What happens to our extreme overfitting case?\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Neural Network with L2 Loss Function and Dropout Layer\n",
+    "\n",
+    "# Neural Network with L2 Loss Function\n",
+    "\n",
+    "def train_graph_with_dropout(hyper_beta=0.001, batch_size=128, hidden_nodes=1024, num_gradient_descent_steps=3001, training_data_set_len=-1):\n",
+    "    graph = tf.Graph()\n",
+    "    with graph.as_default():\n",
+    "\n",
+    "      # Input data. For the training data, we use a placeholder that will be fed\n",
+    "      # at run time with a training minibatch.\n",
+    "      tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                        shape=(batch_size, image_size * image_size))\n",
+    "      tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "      if training_data_set_len > 0:\n",
+    "          tf_train_dataset = tf_train_dataset[:training_data_set_len,:] # limit batch size for overfitting\n",
+    "          tf_train_labels = tf_train_labels[:training_data_set_len] # labels need to match shape of train data set\n",
+    "      tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "      tf_test_dataset = tf.constant(test_dataset)\n",
+    "\n",
+    "      # Variables.\n",
+    "      weights = tf.Variable(tf.truncated_normal([image_size * image_size, hidden_nodes]))\n",
+    "      biases = tf.Variable(tf.zeros([hidden_nodes]))\n",
+    "\n",
+    "      weights2 = tf.Variable(tf.truncated_normal([hidden_nodes, num_labels]))\n",
+    "      biases2 = tf.Variable(tf.zeros([num_labels]))\n",
+    "\n",
+    "      # Training computation.\n",
+    "      logits = tf.matmul(tf_train_dataset, weights) + biases\n",
+    "      x2 = tf.nn.relu(logits)\n",
+    "      keep_prob = tf.placeholder(tf.float32, )\n",
+    "      x2 = tf.nn.dropout(x2,)\n",
+    "      logits2 = tf.matmul(x2, weights2) + biases2\n",
+    "      loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits2))\n",
+    "      l2 = loss + hyper_beta * tf.nn.l2_loss(weights)\n",
+    "\n",
+    "      logits_valid = tf.matmul(tf_valid_dataset, weights) + biases\n",
+    "      x2_valid = tf.nn.relu(logits_valid)\n",
+    "      logits2_valid = tf.matmul(x2_valid, weights2) + biases2\n",
+    "\n",
+    "      logits_test = tf.matmul(tf_test_dataset, weights) + biases\n",
+    "      x2_test = tf.nn.relu(logits_test)\n",
+    "      logits2_test = tf.matmul(x2_test, weights2) + biases2\n",
+    "\n",
+    "      # Optimizer.\n",
+    "      optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(l2)\n",
+    "\n",
+    "      # Predictions for the training, validation, and test data.\n",
+    "      train_prediction = tf.nn.softmax(logits2)\n",
+    "      valid_prediction = tf.nn.softmax(logits2_valid)\n",
+    "      test_prediction = tf.nn.softmax(logits2_test)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    with tf.Session(graph=graph) as session:\n",
+    "      tf.global_variables_initializer().run()\n",
+    "      print(\"Initialized\")\n",
+    "      for step in range(num_gradient_descent_steps):\n",
+    "        # Pick an offset within the training data, which has been randomized.\n",
+    "        # Note: we could use better randomization across epochs.\n",
+    "        train_labels\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        # Generate a minibatch.\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "        # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "        # and the value is the numpy array to feed to it.\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        _, l, predictions = session.run(\n",
+    "          [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 500 == 0):\n",
+    "          print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "          print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "          print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "            valid_prediction.eval(), valid_labels))\n",
+    "      print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))\n",
+    "    \n",
+    "train_graph()"
    ]
   },
   {
