Checkpoint, still need to debug

--- a/tensorflow/examples/udacity/3_regularization.ipynb
+++ b/tensorflow/examples/udacity/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -169,9 +169,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set (200000, 784) (200000, 10)\n",
-      "Validation set (10000, 784) (10000, 10)\n",
-      "Test set (10000, 784) (10000, 10)\n"
+      "Training set (200000, 784) (200000, 1, 10)\n",
+      "Validation set (10000, 784) (10000, 1, 10)\n",
+      "Test set (10000, 784) (10000, 1, 10)\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -239,31 +239,31 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 14.736647\n",
-      "Training accuracy: 19.2%\n",
-      "Validation accuracy: 22.9%\n",
-      "Loss at step 100: 0.789904\n",
+      "Loss at step 0: 15.618587\n",
+      "Training accuracy: 10.6%\n",
+      "Validation accuracy: 16.8%\n",
+      "Loss at step 100: 0.790464\n",
       "Training accuracy: 81.8%\n",
-      "Validation accuracy: 80.5%\n",
-      "Loss at step 200: 0.786119\n",
+      "Validation accuracy: 80.6%\n",
+      "Loss at step 200: 0.786290\n",
       "Training accuracy: 81.8%\n",
-      "Validation accuracy: 80.7%\n",
-      "Loss at step 300: 0.784829\n",
+      "Validation accuracy: 80.6%\n",
+      "Loss at step 300: 0.784887\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 400: 0.784294\n",
+      "Loss at step 400: 0.784317\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 500: 0.784041\n",
+      "Loss at step 500: 0.784051\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 600: 0.783911\n",
+      "Loss at step 600: 0.783916\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 700: 0.783839\n",
+      "Loss at step 700: 0.783842\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
-      "Loss at step 800: 0.783798\n",
+      "Loss at step 800: 0.783800\n",
       "Training accuracy: 81.9%\n",
       "Validation accuracy: 80.6%\n",
       "Test accuracy: 87.7%\n"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -356,15 +356,17 @@
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'train_labels' referenced before assignment",
+     "ename": "ValueError",
+     "evalue": "Cannot feed value of shape (128, 1, 10) for Tensor 'Placeholder_1:0', which has shape '(128, 10)'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-ea88f918932a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     72\u001b[0m       \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test accuracy: %.1f%%\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_prediction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 74\u001b[1;33m \u001b[0mtrain_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-23-ea88f918932a>\u001b[0m in \u001b[0;36mtrain_graph\u001b[1;34m(hyper_beta, batch_size, hidden_nodes, num_gradient_descent_steps, training_data_set_len)\u001b[0m\n\u001b[0;32m     55\u001b[0m           \u001b[0mtrain_dataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtraining_data_set_len\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# limit batch size for overfitting\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m           \u001b[0mtrain_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtraining_data_set_len\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# labels need to match shape of train data set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m         \u001b[0moffset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtrain_labels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m         \u001b[1;31m# Generate a minibatch.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m         \u001b[0mbatch_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffset\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'train_labels' referenced before assignment"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-545593818cac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     74\u001b[0m       \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test accuracy: %.1f%%\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_prediction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 76\u001b[1;33m \u001b[0mtrain_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_data_set_len\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-14-545593818cac>\u001b[0m in \u001b[0;36mtrain_graph\u001b[1;34m(hyper_beta, batch_size, hidden_nodes, num_gradient_descent_steps, training_data_set_len)\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[0mfeed_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mtf_train_dataset\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mbatch_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtf_train_labels\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mbatch_labels\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m         _, l, predictions = session.run(\n\u001b[1;32m---> 68\u001b[1;33m           [optimizer, loss, train_prediction], feed_dict=feed_dict)\n\u001b[0m\u001b[0;32m     69\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m500\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m           \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Minibatch loss at step %d: %f\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Program Files\\Python36\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    887\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    888\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 889\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    890\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    891\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Program Files\\Python36\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1094\u001b[0m                 \u001b[1;34m'Cannot feed value of shape %r for Tensor %r, '\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1095\u001b[0m                 \u001b[1;34m'which has shape %r'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1096\u001b[1;33m                 % (np_val.shape, subfeed_t.name, str(subfeed_t.get_shape())))\n\u001b[0m\u001b[0;32m   1097\u001b[0m           \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_feedable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubfeed_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1098\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Tensor %s may not be fed.'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0msubfeed_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot feed value of shape (128, 1, 10) for Tensor 'Placeholder_1:0', which has shape '(128, 10)'"
      ]
     }
    ],
@@ -422,13 +424,15 @@
     "      for step in range(num_gradient_descent_steps):\n",
     "        # Pick an offset within the training data, which has been randomized.\n",
     "        # Note: we could use better randomization across epochs.\n",
+    "        train_dataset2 = train_dataset\n",
+    "        train_labels2 = train_labels\n",
     "        if training_data_set_len > 0:\n",
-    "          train_dataset = train_dataset[:training_data_set_len,:] # limit batch size for overfitting\n",
-    "          train_labels = train_labels[:training_data_set_len] # labels need to match shape of train data set\n",
-    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "          train_dataset2 = train_dataset2[:training_data_set_len,:] # limit training size for overfitting\n",
+    "          train_labels2 = train_labels2[:training_data_set_len] # labels need to match shape of train data set\n",
+    "        offset = (step * batch_size) % (train_labels2.shape[0] - batch_size)\n",
     "        # Generate a minibatch.\n",
-    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
-    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        batch_data = train_dataset2[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels2[offset:(offset + batch_size), :]\n",
     "        # Prepare a dictionary telling the session where to feed the minibatch.\n",
     "        # The key of the dictionary is the placeholder node of the graph to be fed,\n",
     "        # and the value is the numpy array to feed to it.\n",
@@ -442,7 +446,7 @@
     "            valid_prediction.eval(), valid_labels))\n",
     "      print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))\n",
     "    \n",
-    "train_graph()"
+    "train_graph(training_data_set_len=500)"
    ]
   },
   {
